# elm-marshall-example

./: default.nix
common/: common.cabal  default.nix
common/src/: Main.hs
common/src/ElmMarshall/: Types.hs
common/src/Example/: Ghcjs.hs  Types.hs
elm/: default.nix
elm/src/: Ports.elm  main.elm
ghcjs/: default.nix  elm-marshall-example-ghcjs.cabal  elm-marshall.cabal
ghcjs/src/: Main.hs
static/: index.html
