name:                common
version:             0.1.0.0
synopsis:            Common types shared between ghcjs and Elm
author:              Falco Peijnenburg
license:             LGPL-2.1
license-file:        LICENSE
maintainer:          fpeijnenburg@gmail.com
category:            Development
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:
      base
    , elm-export
  hs-source-dirs:      src
  default-language:    Haskell2010

  exposed-modules:
    ElmMarshall.Types

  default-extensions:
    DeriveAnyClass
    DeriveGeneric
    OverloadedStrings
    PackageImports

executable common
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:
      base
    , elm-export
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:
    DeriveAnyClass
    DeriveGeneric
    OverloadedStrings
    PackageImports
