name:                elm-marshall-example-ghcjs
version:             0.1.0.0
synopsis:            Ghcjs part of the elm-marshall example
-- description:
license:             GPL-2
license-file:        LICENSE
author:              Falco Peijnenburg
maintainer:          fpeijnenburg@gmail.com
-- copyright:
category:            Web
build-type:          Custom
-- extra-source-files:
cabal-version:       >=1.10

executable elm-marshall
  main-is:             Main.hs

  -- other-extensions:
  build-depends:
      base
    , common
    , elm-marshall
    , ghcjs-base
    , ghcjs-dom
    , ghcjs-ffiqq

  hs-source-dirs:      src
  default-language:    Haskell2010
  buildable: True

  ghc-options: -Wall

  cpp-options:
    -DGHCJS_BROWSER

  default-extensions:
    PackageImports
    RecursiveDo
